[package]
name = "goto"
version = "0.1.6"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/Goto.git"
homepage = "https://crates.io/crates/goto"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Safe and convenient zero-cost 'goto' implementations for RustLang."
keywords = ["goto", "gtree", "macro", "no_std", "clucompany"]
categories = ["development-tools"]

[dependencies]
